--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,7 @@ name = "pypi"
 [packages]
 pynput = "*"
 qrcode = "*"
+"infi.systray" = {version = "*", sys_platform = "== 'win32'"}
 
 [dev-packages]
 pyinstaller = "*"
